--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build & next export",
     "start": "next start",
     "lint": "next lint"
   },
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.3.0",
     "axios": "^0.21.4",
     "graphql-request": "^3.5.0",
+    "jwt-decode": "^3.1.2",
     "next": "11.1.2",
     "nookies": "^2.5.2",
     "nprogress": "^0.2.0",
