--- a/package.json
+++ b/package.json
@@ -10,34 +10,34 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
-    "axios": "^0.21.4",
-    "formik": "^2.2.9",
-    "graphql-request": "^3.5.0",
-    "jwt-decode": "^3.1.2",
-    "next": "^11.0.2-canary.4",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "axios": "^1.6.3",
+    "formik": "^2.4.5",
+    "graphql-request": "^6.1.0",
+    "jwt-decode": "^4.0.0",
+    "next": "^13.5",
     "nookies": "^2.5.2",
     "nprogress": "^0.2.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-overlays": "^5.1.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-overlays": "^5.2.1",
     "stylis-plugin-rtl": "^2.1.1",
-    "swr": "^1.0.1"
+    "swr": "^2.2.4"
   },
   "devDependencies": {
-    "@types/node": "^16.9.3",
-    "@types/nprogress": "^0.2.0",
-    "@types/react": "^17.0.21",
-    "@types/react-dom": "^17.0.9",
+    "@types/node": "^20.10.6",
+    "@types/nprogress": "^0.2.3",
+    "@types/react": "^18.2.46",
+    "@types/react-dom": "^18.2.18",
     "babel-plugin-import-directory": "^1.1.0",
     "babel-plugin-wildcard": "^7.0.0",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
-    "globby": "^12.0.2",
-    "istanbul-lib-coverage": "^3.0.0",
-    "next-sitemap": "^1.6.121",
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.0.4",
+    "globby": "^14.0.0",
+    "istanbul-lib-coverage": "^3.2.2",
+    "next-sitemap": "^4.2.3",
     "nyc": "^15.1.0",
-    "typescript": "^4.4.3"
+    "typescript": "^5.3.3"
   }
 }
